[package]
name = "test_eq"
version = "0.2.0"
authors = ["Christiaan Biesterbosch <github@kriskras99.nl"]
edition = "2021"
rust-version = "1.58.1"
description = "assert_eq!-like macros that return a Result instead"
readme = "README.md"
repository = "https://github.com/kriskras99/test_eq"
license = "MIT OR Apache-2.0"
keywords = ["testing", "macro", "test_any", "test_ne"]
categories = ["development-tools", "parsing", "rust-patterns"]

[dependencies]

[features]
default = ["line-info"]
# Provide the location in the source file where the error happened.
# This information is set at compile time and cannot be removed with `debug=false` or `strip=true`
line-info = []

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
as_conversions = "deny"
empty_structs_with_brackets = "deny"
get_unwrap = "deny"
lossy_float_literal = "deny"
missing_assert_message = "deny"
missing_panics_doc = "deny"
allow_attributes_without_reason = "deny"
missing_docs_in_private_items = "deny"
doc_markdown = "allow" # unreliable
option_if_let_else = "allow" # don't like that style
must_use_candidate = "allow" # not relevant for this

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
unescaped_backticks = "warn"
